Presunuté priečinky js css z app do shared.

--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -7,10 +7,10 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../../style.css" rel="stylesheet">
-    <link href="../../css/header.css" rel="stylesheet">
-    <link href="../../css/home-layout.css" rel="stylesheet">
+    <link href="../../shared/css/header.css" rel="stylesheet">
+    <link href="../../shared/css/home-layout.css" rel="stylesheet">
     <link href="../css/checklist.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../css/breadcrumbs.css">
+    <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
 
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -21,7 +21,7 @@
     <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="../../js/index.js"></script>
+    <script src="../../shared/jsndex.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="../../three-level-menu/js/three-level-menu.component.js"></script>
     <script src="../../breadcrumbs/breadcrumbs-component.js"></script>
