--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <link href="app/css/home-layout.css" rel="stylesheet">
-    <link href="app/css/breadcrumbs.css" rel="stylesheet">
+    <link href="app/shared/css/home-layout.css" rel="stylesheet">
+    <link href="app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="app/attendance-counter/css/attendance-counter.component.css" rel="stylesheet">
     <link href="app/name-day-finder/css/name-day-finder.component.css" rel="stylesheet">
     <script crossorigin="anonymous"
@@ -24,7 +24,7 @@
     <script src="app/attendance-counter/js/attendance-cookies-handler.js"></script>
     <script src="app/attendance-counter/js/attendanceCounter.component.js"></script>
     <script src="app/name-day-finder/js/name-day-finder.component.js"></script>
-    <script src="app/js/index.js"></script>
+    <script src="app/shared/js/index.js"></script>
     <script src="app/breadcrumbs/breadcrumbs-component.js"></script>
     <script src="app/three-level-menu/js/three-level-menu.component.js"></script>
 
