--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -7,13 +7,13 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
-    <link href="../../app/css/header.css" rel="stylesheet">
-    <link href="../../app/css/game-style.css" rel="stylesheet">
+    <link href="../../app/shared/css/header.css" rel="stylesheet">
+    <link href="../../app/shared/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <link href="../css/modal.css" rel="stylesheet">
 
-    <link href="../../app/css/breadcrumbs.css" rel="stylesheet">
-    <link href="../../app/css/print.css" rel="stylesheet">
+    <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
+    <link href="../../app/shared/css/print.css" rel="stylesheet">
 
     <script src="../../app/attendance-counter/js/attendance-cookies-handler.js"></script>
 
