--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -7,9 +7,9 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
-    <link href="../../app/css/game-style.css" rel="stylesheet">
+    <link href="../../app/shared/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
-    <link href="../../app/css/breadcrumbs.css" rel="stylesheet">
+    <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
     <script src="../js/canvas/coordinates.js"></script>
     <script src="../js/puzzle/piece/imagePiece.js"></script>
     <script src="../js/puzzle/piece/piece.js"></script>
