Finalizácia projektu, pridanie loga,ikony stránky,pridaná cesta pre FEI STU, komponent trojurovnove menu upravený na možnosť pridania extérnej cesty.

--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -14,9 +14,9 @@
 
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="../../app/shared/css/print.css" rel="stylesheet">
+    <link rel="icon" href="../../logo.png" type="image/png">
 
     <script src="../../app/attendance-counter/js/attendance-cookies-handler.js"></script>
-
     <script src="../js/game.js"></script>
     <script src="../../app/breadcrumbs/breadcrumbs-component.js"></script>
     <script src="../../app/three-level-menu/js/three-level-menu.component.js"></script>
