--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -10,6 +10,8 @@
     <link href="../../app/shared/css/game-layout.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
+    <link rel="icon" href="../../logo.png" type="image/png">
+
     <script src="../js/canvas/coordinates.js"></script>
     <script src="../js/puzzle/piece/imagePiece.js"></script>
     <script src="../js/puzzle/piece/piece.js"></script>
@@ -39,8 +41,6 @@
 <body onload="onLoad()">
 <audio id="tick" preload="auto" src="../../app/assets/audio/sremanak/tick.mp3"></audio>
 <audio id="done" preload="auto" src="../../app/assets/audio/sremanak/done.mp3"></audio>
-
-
 
 
 <three-level-menu>
