--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -11,6 +11,7 @@
     <link href="../../shared/css/home-layout.css" rel="stylesheet">
     <link href="../css/checklist.css" rel="stylesheet">
     <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
+    <link rel="icon" href="../../../logo.png" type="image/png">
 
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -21,7 +22,7 @@
     <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="../../shared/jsndex.js"></script>
+    <script src="../../shared/js/index.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="../../three-level-menu/js/three-level-menu.component.js"></script>
     <script src="../../breadcrumbs/breadcrumbs-component.js"></script>
