--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="app/attendance-counter/css/attendance-counter.component.css" rel="stylesheet">
     <link href="app/name-day-finder/css/name-day-finder.component.css" rel="stylesheet">
+    <link rel="icon" href="./logo.png" type="image/png">
+
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
