--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -11,7 +11,7 @@
     <link href="../../shared/css/home-layout.css" rel="stylesheet">
     <link href="../css/checklist.css" rel="stylesheet">
     <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
-    <link rel="icon" href="../../../logo.png" type="image/png">
+    <link rel="icon" href="../../../favicon.png" type="image/png">
 
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
