--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -12,7 +12,7 @@
     <link href="../../checklist/css/checklist.css" rel="stylesheet">
     <link href="../css/contact.css" rel="stylesheet">
     <link rel="stylesheet" href="../../shared/css/breadcrumbs.css">
-    <link rel="icon" href="../../../logo.png" type="image/png">
+    <link rel="icon" href="../../../favicon.png" type="image/png">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
