--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="app/shared/css/breadcrumbs.css" rel="stylesheet">
     <link href="app/attendance-counter/css/attendance-counter.component.css" rel="stylesheet">
     <link href="app/name-day-finder/css/name-day-finder.component.css" rel="stylesheet">
-    <link rel="icon" href="./logo.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
 
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
