--- a/sokol/html/game.html
+++ b/sokol/html/game.html
@@ -19,7 +19,7 @@
     <link href="../../app/shared/css/game-layout.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <link href="../../app/shared/css/breadcrumbs.css" rel="stylesheet">
-    <link rel="icon" href="../../logo.png" type="image/png">
+    <link rel="icon" href="../../favicon.png" type="image/png">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/jquery.ui.touch-punch.min.js"></script>
