UPDATE: moje zdroje

--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -313,6 +313,20 @@
                        href="https://www.lauwers.be/Media/LAUW/_Profiles/bc2da2b2/a9621f4e/12492-2%20Firenze.jpg?v=637432752956418284">obrázok
                     (Pohľady Florencie)</a></td>
             </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://www.pluggedin.com/movie-reviews/my-little-pony-the-movie-2017/">
+                    obrázok (Môj malý poník)</a></td>
+            </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://www.w3schools.com/js/js_cookies.asp">cookies</a></td>
+            </tr>
+            <tr>
+                <td><a class="a-link-color"
+                       href="https://stackoverflow.com/questions/990904/remove-accents-diacritics-in-a-string-in-javascript/37511463#37511463">
+                    porovnanie stringov bez ohľadu na diakritiku</a></td>
+            </tr>
 
 
             </tbody>
