--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <link href="style.css" rel="stylesheet">
-    <link href="app/css/footer.css" rel="stylesheet">
-    <link href="app/css/header.css" rel="stylesheet">
-    <link href="app/css/index.css" rel="stylesheet">
-    <link href="app/css/home-layout.css" rel="stylesheet">
+    <link href="app/shared/css/footer.css" rel="stylesheet">
+    <link href="app/shared/css/header.css" rel="stylesheet">
+    <link href="app/shared/css/index.css" rel="stylesheet">
+    <link href="app/shared/css/home-layout.css" rel="stylesheet">
     <link href="app/name-day-finder/css/name-day-finder.component.css" rel="stylesheet">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -25,7 +25,7 @@
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <script src="app/name-day-finder/js/name-day-finder.component.js"></script>
-    <script src="app/js/index.js"></script>
+    <script src="app/shared/jsndex.js"></script>
 
 
 </head>
@@ -48,7 +48,7 @@
 
         <span class="thumbnail-container-title">Záhada stratenej perly</span>
         <img alt="Thumbnail gamepad" class="thumbnail-container-image gamepad-image"
-             src="./app/assets/images/gamepad.png">
+             src="app/shared/assets/images/gamepad.png">
         <span class="thumbnail-container-name">Michal <span class="bold-max">Palenčár</span> </span>
     </div>
     <div class="thumbnail-container-game bomb-background thumbnail-container-background"
@@ -57,7 +57,7 @@
         <span class=" thumbnail-container-title
     ">Vojna dvoch trpaslíkov</span>
         <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
-             src="./app/assets/images/bomb.png">
+             src="app/shared/assets/images/bomb.png">
         <span class="thumbnail-container-name">Matej <span class="bold-max">Peluha</span> </span>
 
     </div>
@@ -66,7 +66,7 @@
          onclick="changeView('./sremanak/html/game.html')">
         <span class="thumbnail-container-title ">Dobrodružstvá v džungli</span>
         <img alt="Thumbnail robot" class="thumbnail-container-image robot-image"
-             src="./app/assets/images/robot.png">
+             src="app/shared/assets/images/robot.png">
         <span class="thumbnail-container-name">Ľuboš <span
                 class="bold-max">Sremaňák</span> </span>
     </div>
@@ -77,7 +77,7 @@
         <span class=" thumbnail-container-title
     ">Štyri cigančata a peso</span>
         <img alt="Thumbnail cup" class="thumbnail-container-image cup-image"
-             src="./app/assets/images/cup.png">
+             src="app/shared/assets/images/cup.png">
         <span class="thumbnail-container-name">Kristian <span
                 class="bold-max">Sokol</span> </span>
     </div>
