--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -7,8 +7,8 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
-    <link href="../../app/css/header.css" rel="stylesheet">
-    <link href="../../app/css/game-style.css" rel="stylesheet">
+    <link href="../../app/shared/css/header.css" rel="stylesheet">
+    <link href="../../app/shared/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <script src="../js/game.js"></script>
 
@@ -41,7 +41,7 @@
 
     <canvas class="game-container-canvas" height="500" id="game-canvas" width="1000">
         <img alt="Game picture" height="500" id="game-image"
-             src="../../app/assets/images/1000x500.png"
+             src="../../app/shared/assets/images/1000x500.png"
              width="1000">
     </canvas>
 </section>
