--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <span class="thumbnail-container-title">Záhada stratenej perly</span>
         <img alt="Thumbnail gamepad" class="thumbnail-container-image gamepad-image"
-             src="app/shared/assets/images/gamepad.png">
+             src="app/assets/images/gamepad.png">
         <span class="thumbnail-container-name">Michal <span class="bold-max">Palenčár</span> </span>
     </div>
     <div class="thumbnail-container-game bomb-background thumbnail-container-background"
@@ -57,7 +57,7 @@
         <span class=" thumbnail-container-title
     ">Vojna dvoch trpaslíkov</span>
         <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
-             src="app/shared/assets/images/bomb.png">
+             src="app/assets/images/bomb.png">
         <span class="thumbnail-container-name">Matej <span class="bold-max">Peluha</span> </span>
 
     </div>
@@ -66,7 +66,7 @@
          onclick="changeView('./sremanak/html/game.html')">
         <span class="thumbnail-container-title ">Dobrodružstvá v džungli</span>
         <img alt="Thumbnail robot" class="thumbnail-container-image robot-image"
-             src="app/shared/assets/images/robot.png">
+             src="app/assets/images/robot.png">
         <span class="thumbnail-container-name">Ľuboš <span
                 class="bold-max">Sremaňák</span> </span>
     </div>
@@ -77,7 +77,7 @@
         <span class=" thumbnail-container-title
     ">Štyri cigančata a peso</span>
         <img alt="Thumbnail cup" class="thumbnail-container-image cup-image"
-             src="app/shared/assets/images/cup.png">
+             src="app/assets/images/cup.png">
         <span class="thumbnail-container-name">Kristian <span
                 class="bold-max">Sokol</span> </span>
     </div>
