Pridané Pohľady Florencie (hra)

--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -38,7 +38,7 @@
     <breadcrumbs-component></breadcrumbs-component>
 </div>
 
-<section class="thumbnail-container">
+<section class="thumbnail-container contact-top">
     <div class="contact-content color-palencar">
         <img class="contact-img" src="../../assets/avatars/palencar_avatar.png" alt="Michal Palenčár">
         <h1 class="contact-name">Michal Palenčár</h1>
