--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -57,54 +57,6 @@
 
             <tbody class="scrollable-table">
             <tr>
-                <td>strihanie obrázkov</td>
-                <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td>checklist</td>
-                <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td>kontakt</td>
-                <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td>hlavička</td>
-                <td>
-                    <lottie-player class="center-checkmark icon-size"
-                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
-                                   autoplay></lottie-player>
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
                 <td>štruktúra projektu</td>
                 <td></td>
                 <td></td>
@@ -115,7 +67,6 @@
                 </td>
                 <td></td>
             </tr>
-
             <tr>
                 <td>git organizácia</td>
                 <td></td>
@@ -127,9 +78,33 @@
                 </td>
                 <td></td>
             </tr>
-
             <tr>
-                <td>layout hlavnej stránky dizajn</td>
+                <td>strihanie obrázkov</td>
+                <td>
+                    <lottie-player class="center-checkmark icon-size"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
+                                   autoplay></lottie-player>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>hlavička</td>
+                <td>
+                    <lottie-player class="center-checkmark icon-size"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
+                                   autoplay></lottie-player>
+                </td>
+                <td></td>
+                <td>
+
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>breadcrumbs komponent</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td>
@@ -137,11 +112,10 @@
                                    src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
                                    autoplay></lottie-player>
                 </td>
-                <td></td>
             </tr>
-
             <tr>
-                <td>layout hier dizajn</td>
+                <td>breadcrumbs dizajn</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td>
@@ -149,9 +123,7 @@
                                    src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
                                    autoplay></lottie-player>
                 </td>
-                <td></td>
             </tr>
-
             <tr>
                 <td>trojúrovňové menu komponent</td>
                 <td></td>
@@ -163,7 +135,6 @@
                 </td>
                 <td></td>
             </tr>
-
             <tr>
                 <td>trojúrovňové menu dizajn</td>
                 <td></td>
@@ -175,7 +146,6 @@
                 </td>
                 <td></td>
             </tr>
-
             <tr>
                 <td>počítadlo prístupov komponent</td>
                 <td></td>
@@ -187,7 +157,6 @@
                 <td></td>
                 <td></td>
             </tr>
-
             <tr>
                 <td>počítadlo prístupov dizajn</td>
                 <td></td>
@@ -199,7 +168,17 @@
                 <td></td>
                 <td></td>
             </tr>
-
+            <tr>
+                <td>kontakt</td>
+                <td>
+                    <lottie-player class="center-checkmark icon-size"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
+                                   autoplay></lottie-player>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
             <tr>
                 <td>meniny komponent</td>
                 <td></td>
@@ -225,7 +204,7 @@
             </tr>
 
             <tr>
-                <td>breadcrumbs komponent</td>
+                <td>testovanie stránok</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -235,19 +214,17 @@
                                    autoplay></lottie-player>
                 </td>
             </tr>
-
             <tr>
-                <td>breadcrumbs dizajn</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>checklist</td>
                 <td>
                     <lottie-player class="center-checkmark icon-size"
                                    src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
                                    autoplay></lottie-player>
                 </td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
-
             <tr>
                 <td>úprava na tlač</td>
                 <td></td>
@@ -260,9 +237,21 @@
                 </td>
             </tr>
 
+
             <tr>
-                <td>tester</td>
+                <td>animácie</td>
+                <td>
+                </td>
                 <td></td>
+                <td>
+                    <lottie-player class="center-checkmark icon-size"
+                                   src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
+                                   autoplay></lottie-player>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>layout, dizajn stránky</td>
                 <td></td>
                 <td></td>
                 <td>
@@ -270,8 +259,9 @@
                                    src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1"
                                    autoplay></lottie-player>
                 </td>
-            </tr>
-
+                <td></td>
+            </tr
+            >
             <tr>
                 <td>grafický návrh stránky</td>
                 <td>
